Function renaming, added colour/css.

--- a/src/css/Navigation.css
+++ b/src/css/Navigation.css
@@ -26,7 +26,7 @@ body {
 }
 
 .bm-item:hover {
-  color: white;
+  color: #F9AA33;
 }
 
 .bm-burger-button {
@@ -39,7 +39,7 @@ body {
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-  background: #373a47;
+  background: #F9AA33;
 }
 
 /* Position and sizing of clickable cross button */
@@ -55,7 +55,7 @@ body {
 
 /* General sidebar styles */
 .bm-menu {
-  background: #000;
+  background: #4A6572;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
   text-anchor: middle;
