--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,28 +1,23 @@
-html,
-body {
+.body {
   margin: 0;
+  padding: 15px;
 }
 
 .App {
   text-align: center;
-  position: absolute;
   top: 40px; /* Header Height */
   bottom: 20px; /* Footer Height */
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
+  position: relative;
+  min-height: 100vh;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header-fill {
@@ -40,6 +35,54 @@ body {
   color: #61dafb;
 }
 
+.App-header{
+  box-sizing: content-box;
+  width: 100%;
+  height: fit-content;
+  display: -webkit-flex;
+  justify-content: center;
+  padding: 0 1.5em 0 1.5em;
+  background-color:#344955;
+  color: #fff;
+  text-transform: capitalize;
+}
+
+.App-footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;  
+  margin: 0 3em 0 3em; 
+}
+
+.App-centre{
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  margin: 1em 5em 0 5em
+}
+
+.circle-icon {
+  padding:10px;
+  border-radius: 50%;
+  top: 0px;
+  left: 0;
+  position: absolute;
+  transition: all .2s ease-in-out;
+}
+
+.circle-icon:hover { transform: scale(1.1); }
+
+.img {
+  width: 100%;
+  background-size: 200% 200%;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
 
 @keyframes App-logo-spin {
   from {
@@ -48,26 +91,4 @@ body {
   to {
     transform: rotate(360deg);
   }
-}
-
-.App-header{
-  box-sizing: content-box;
-  width: 90%;
-  height: fit-content;
-  display: -webkit-flex;
-  justify-content: center;
-  padding: 0 1.5em 0 1.5em;
-  background-color:royalblue;
-  color: #fff;
-}
-
-.App-footer {
-  flex-shrink: 0;
-  padding:15px;
-}
-
-.App-centre{
-  justify-content: center;
-  align-content: center;
-  align-items: center;
 }
